issue w/ footer placement on mobile

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ img{
 aside{
     font-size: .65rem;
     text-align: center;
-    padding-top: 1.5rem;
+    padding-top: 15px;
     color: var(--color-white);
 }
 
